--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "e": "0.0.4",
     "express": "^4.17.1",
     "express-validator": "^6.3.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.4.0",
     "mongoose": "^5.8.1"
   },
