--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/jurelmartin/thirdweek#readme",
   "dependencies": {
     "bcrypt": "^3.0.7",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "e": "0.0.4",
     "express": "^4.17.1",
